--- a/source/index.html
+++ b/source/index.html
@@ -7,47 +7,48 @@
     <title>Pink</title>
   </head>
   <body>
-    <header class="page-header">
-      <div class="page-header__bg-nav-wrapper">
-        <div class="page-header__nav-wrapper">
-          <div class="page-header__panel">
-            <a class="page-header__logo">
-              <img src="№" alt="Логотип сайта">
-            </a>
-            <button class="page-header__toggle">
-              <span class="visually-hidden">Открыть меню</span>
-            </button>
+    <div class="bg-container bg-container--header">
+      <header class="page-header">
+        <div class="page-header__bg-nav-wrapper">
+          <div class="page-header__nav-wrapper">
+            <div class="page-header__panel">
+              <a class="page-header__logo">
+                <img src="№" alt="Логотип сайта">
+              </a>
+              <button class="page-header__toggle">
+                <span class="visually-hidden">Открыть меню</span>
+              </button>
+            </div>
+            <nav class="main-nav main-nav--nojs">
+              <ul class="main-nav__list">
+                <li class="main-nav__item main-nav__item--active"><a>Главная</a></li>
+                <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
+                <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
+                <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
+              </ul>
+            </nav>
           </div>
-          <nav class="main-nav main-nav--nojs">
-            <ul class="main-nav__list">
-              <li class="main-nav__item main-nav__item--active"><a>Главная</a></li>
-              <li class="main-nav__item"><a href="photo.html">Фотографии</a></li>
-              <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-              <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
-            </ul>
-          </nav>
         </div>
-      </div>
 
-      <section class="downloads">
-        <div class="downloads__content">
-          <h2 class="downloads__title">Взгляните на жизнь иначе!</h2>
-          <a class="downloads__btn" href="#">Скачать приложение</a>
-          <div class="downloads__apps">
-            <a class="downloads__link" href="https://www.apple.com/itunes/">
-              <img src="img/logo-apple.svg" alt="Apple" width="47" height="56" title="Apple">
-            </a>
-            <a class="downloads__link" href="https://play.google.com/store/">
-              <img src="img/logo-android.svg" alt="Android" width="43" height="47" title="Android">
-            </a>
-            <a class="downloads__link" href="https://www.microsoft.com/ru-RU/store/apps/">
-              <img src="img/logo-microsoft.svg" alt="Microsoft" width="44" height="41" title="Microsoft">
-            </a>
+        <section class="downloads">
+          <div class="downloads__content">
+            <h2 class="downloads__title">Взгляните на жизнь иначе!</h2>
+            <a class="downloads__btn" href="#">Скачать приложение</a>
+            <div class="downloads__apps">
+              <a class="downloads__link" href="https://www.apple.com/itunes/">
+                <img src="img/logo-apple.svg" alt="Apple" width="47" height="56" title="Apple">
+              </a>
+              <a class="downloads__link" href="https://play.google.com/store/">
+                <img src="img/logo-android.svg" alt="Android" width="43" height="47" title="Android">
+              </a>
+              <a class="downloads__link" href="https://www.microsoft.com/ru-RU/store/apps/">
+                <img src="img/logo-microsoft.svg" alt="Microsoft" width="44" height="41" title="Microsoft">
+              </a>
+            </div>
+            <p class="downloads__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
           </div>
-          <p class="downloads__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-        </div>
-      </section>
-    </header>
+        </section>
+      </header>
     </div>
 
   </body>
