Index - разметка преимуществ

--- a/source/index.html
+++ b/source/index.html
@@ -51,5 +51,33 @@
       </header>
     </div>
 
+    <main>
+      <h1 class="visually-hidden">Приложение PINK!</h1>
+
+      <section class="features">
+        <div class="features__slogans set-width">
+          <p class="features__slogan">Устали от серости мегаполиса?</p>
+          <p class="features__slogan features__slogan--short">Нам есть, что вам предложить!</p>
+        </div>
+        <div class="features__bg">
+          <ul class="features__list set-width">
+            <li class="features__item">
+              <h3 class="features__title">Поднимает настроение</h3>
+              <p class="features__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__title">Меняет мир вокруг</h3>
+              <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__title">Заводит новых&nbsp;друзей</h3>
+              <p class="features__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+    </main>
+
   </body>
 </html>
