Index - разметка блока таймер

--- a/source/index.html
+++ b/source/index.html
@@ -77,6 +77,16 @@
         </div>
       </section>
 
+      <section class="timer">
+        <div class="timer__description">
+          <h3 class="timer__title">Эффект на&nbsp;24 часа!</h3>
+          <p class="timer__text">Британские ученые провели исследования и доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
+          <a href="#" class="timer__link">Узнать больше об исследовании</a>
+        </div>
+      </section>
+
+      
+
     </main>
 
   </body>
