Index - разметка отзывов

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,45 @@
         </div>
       </section>
 
-      
+      <section class="reviews set-width">
+        <h2 class="visually-hidden">Отзывы пользователей приложения</h2>
+        <div class="reviews__slider">
+          <div class="reviews__control controls">
+            <input class="controls__point" type="radio" name="reviews-control" id="reviews-control-1" checked>
+            <input class="controls__point" type="radio" name="reviews-control" id="reviews-control-2">
+            <input class="controls__point" type="radio" name="reviews-control" id="reviews-control-3">
+            <div class="controls__labels">
+              <label for="reviews-control-1" class="controls__label" tabindex="0"><span class="visually-hidden">Первый слайд</span></label>
+              <label for="reviews-control-2" class="controls__label" tabindex="0"><span class="visually-hidden">Второй слайд</span></label>
+              <label for="reviews-control-3" class="controls__label" tabindex="0"><span class="visually-hidden">Третий слайд</span></label>
+            </div>
+          </div>
+          <ul class="reviews__list">
+            <li class="reviews__item reviews__item--active">
+              <h3 class="reviews__name">Николай Петров</h3>
+              <p class="reviews__about-author">25 лет, водитель трамвая</p>
+              <p class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к
+                выложенной фотографии!</p>
+            </li>
+            <li class="reviews__item">
+              <h3 class="reviews__name">Вася Пупкин</h3>
+              <p class="reviews__about-author">59 лет, ученый с мировым именем</p>
+              <p class="reviews__text">Это потрясающе! После того, как я запостил свои фото с плавания по необитаемым островам Филиппинского архипелага, мне пришло столько писем!!! А еще мне
+                досталась победа в ноябрьском конкурсе за снимки тайфуна!</p>
+            </li>
+            <li class="reviews__item">
+              <h3 class="reviews__name">Старушка Шапокляк</h3>
+              <p class="reviews__about-author">чуть более 100 лет, героиня известного мульфильма</p>
+              <p class="reviews__text">Мы с Ларисой летели на вертолете. Под нами были горы и хрустальное горное озеро. Я делала снимки все 5 минут, пока мы спускались на парашюте! Ларискин парашют
+                унесло на другую сторону озера. А я предупреждала, что крыски слишком легки для таких полетов...</p>
+            </li>
+          </ul>
+          <button class="reviews__btn reviews__btn--back" type="button"><span class="visually-hidden">Назад</span></button>
+          <button class="reviews__btn reviews__btn--forward" type="button"><span class="visually-hidden">Вперед</span></button>
+        </div>
+      </section>
+
+
 
     </main>
 
