--- a/source/index.html
+++ b/source/index.html
@@ -201,5 +201,27 @@
         </div>
       </section>
     </main>
+
+    <footer class="page-footer page-footer--mobile set-width">
+      <a class="page-footer__logo">
+        <img src="#" alt="Логотип сайта">
+      </a>
+      <section class="page-footer__social social">
+        <h2 class="visually-hidden">Ссылки на социальные сети</h2>
+        <a class="social__btn" href="#">
+          <img src="#" alt="Твитер">
+        </a>
+        <a class="social__btn" href="#">
+          <img src="#" alt="Фейсбук">
+        </a>
+        <a class="social__btn" href="#">
+          <img src="#" alt="Ютуб">
+        </a>
+      </section>
+      <a class="page-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">Разработано</span>
+        <img src="#" alt="Логотип академии">
+      </a>
+    </footer>
   </body>
 </html>
