--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
     <title>Pink</title>
   </head>
   <body>
+    <!-- Шапка сайта -->
     <div class="bg-container bg-container--header">
       <header class="page-header">
         <div class="page-header__bg-nav-wrapper">
@@ -20,6 +21,8 @@
                 <span class="visually-hidden">Открыть меню</span>
               </button>
             </div>
+
+            <!-- Основная навигация -->
             <nav class="main-nav main-nav--nojs">
               <ul class="main-nav__list">
                 <li class="main-nav__item main-nav__item--active">
@@ -42,6 +45,7 @@
           </div>
         </div>
 
+        <!-- Блок загрузки приложения -->
         <section class="downloads">
           <div class="downloads__content">
             <h2 class="downloads__title">Взгляните на жизнь иначе!</h2>
@@ -70,6 +74,7 @@
     <main>
       <h1 class="visually-hidden">Приложение PINK!</h1>
 
+      <!-- Преимущества -->
       <section class="features">
         <div class="features__slogans set-width">
           <p class="features__slogan">Устали от серости мегаполиса?</p>
@@ -110,6 +115,7 @@
         </div>
       </section>
 
+      <!-- Отзывы -->
       <section class="reviews set-width">
         <h2 class="visually-hidden">Отзывы пользователей приложения</h2>
 
@@ -164,7 +170,6 @@
             </li>
           </ul>
 
-
           <button class="reviews__btn reviews__btn--back" type="button">
             <span class="visually-hidden">Назад</span>
           </button>
@@ -175,6 +180,7 @@
         </div>
       </section>
 
+      <!-- Блок тарифов -->
       <section class="tariffs">
         <h2 class="visually-hidden">Тарифы</h2>
 
@@ -184,7 +190,6 @@
           <input class="controls__point" type="radio" name="tariffs-control" id="tariffs-control-2" checked>
 
           <input class="controls__point" type="radio" name="tariffs-control" id="tariffs-control-3">
-
 
           <div class="controls__labels">
             <label for="tariffs-control-1" class="controls__label" tabindex="0">
@@ -200,6 +205,8 @@
             </label>
           </div>
         </div>
+
+        <!-- Таблица блока тарифов -->
         <div class="tariffs__bg">
           <table class="tariffs__slider">
             <tr class="tariffs__str">
@@ -274,6 +281,7 @@
         </div>
       </section>
 
+      <!-- Контакты -->
       <section class="contacts">
         <div class="contacts__wrap  set-width">
           <h2 class="visually-hidden">Контакты</h2>
@@ -305,12 +313,14 @@
           </ul>
         </div>
 
+        <!-- Карта -->
         <div class="contacts__map-wrap">
           <img src="#" alt="Как до нас добраться">
         </div>
       </section>
     </main>
 
+    <!-- Футер -->
     <footer class="page-footer page-footer--mobile set-width">
       <a class="page-footer__logo">
         <img src="#" alt="Логотип сайта">
@@ -331,6 +341,7 @@
           <img src="#" alt="Ютуб">
         </a>
       </section>
+      
       <a class="page-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="copyright__text">Разработано</span>
 
