Photo - разметка шапки

--- a/source/photo.html
+++ b/source/photo.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Фотографии</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Фотографии</title>
+  </head>
+  <body>
+    <!-- Шапка сайта -->
+    <div class="bg-container bg-container--header">
+      <header class="page-header">
+        <div class="page-header__bg-nav-wrapper">
+          <div class="page-header__nav-wrapper">
+            <div class="page-header__panel">
+              <a class="page-header__logo">
+                <img src="№" alt="Логотип сайта">
+              </a>
 
-</body>
+              <button class="page-header__toggle">
+                <span class="visually-hidden">Открыть меню</span>
+              </button>
+            </div>
+
+            <!-- Основная навигация -->
+            <nav class="main-nav main-nav--nojs">
+              <ul class="main-nav__list">
+                <li class="main-nav__item main-nav__item--active">
+                  <a href="index.html">Главная</a>
+                </li>
+
+                <li class="main-nav__item main-nav__item--active">
+                  <a>Фотографии</a>
+                </li>
+
+                <li class="main-nav__item">
+                  <a href="form.html">Конкурс</a>
+                </li>
+
+                <li class="main-nav__item">
+                  <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <h1 class="page-header__title">Фотографии пользователей</h1>
+      </header>
+    </div>
+
+    <main class="page-main page-main--photo">
+      <p class="page-main__text set-width">Взгляните на фотографии, которые выкладывают пользователи! Видите,&nbsp;как&nbsp;не хватает ваших?</p>
+
+
+  </body>
 </html>
