--- a/source/photo.html
+++ b/source/photo.html
@@ -51,6 +51,139 @@
     <main class="page-main page-main--photo">
       <p class="page-main__text set-width">Взгляните на фотографии, которые выкладывают пользователи! Видите,&nbsp;как&nbsp;не хватает ваших?</p>
 
+      <section class="gallery set-width">
+        <h2 class="visually-hidden">Фотогалерея</h2>
+        <ul class="gallery__list">
+          <li class="gallery__item gallery__item--panorama">
+            <div class="gallery__img-wrapper">
+              <a class="gallery__img-link" href="img/panorama-desktop@2x.jpg" target="blank" title="Увеличить фото">
+                <span class="gallery__img-label">Панорама дня</span>
+
+                <img src="#" alt="Панорама">
+              </a>
+            </div>
+
+            <div class="gallery__post post post--panorama">
+              <div class="post__author">
+                <span class="post__name">Анна</span>
+
+                <span class="post__time">(5 минут назад)</span>
+              </div>
+
+              <p class="post__message">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+
+              <button class="post__like" type="button">Нравится: 215</button>
+            </div>
+          </li>
+
+          <li class="gallery__item">
+            <a href="img/photo-car-desktop@2x.jpg" target="blank" title="Увеличить фото">
+              <img src="#" alt="Машина">
+            </a>
+
+            <div class="gallery__post post">
+              <div class="post__author">
+                <span class="post__name">Левон</span>
+
+                <span class="post__time">(5 часов назад)</span>
+              </div>
+
+              <p class="post__message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+
+              <button class="post__like" type="button">Нравится: 356</button>
+            </div>
+          </li>
+
+          <li class="gallery__item">
+            <a href="img/photo-drumset-desktop@2x.jpg" target="blank" title="Увеличить фото">
+              <img src="#" alt="Drumset">
+            </a>
+
+            <div class="gallery__post post">
+              <div class="post__author">
+                <span class="post__name">Антон</span>
+
+                <span class="post__time">(12 часов назад)</span>
+              </div>
+
+              <p class="post__message">Соседи будут рады!</p>
+
+              <button class="post__like" type="button">Нравится: 666</button>
+            </div>
+          </li>
+
+          <li class="gallery__item">
+            <a href="img/photo-window-desktop@2x.jpg" target="blank" title="Увеличить фото">
+              <img src="#" alt="window">
+            </a>
+
+            <div class="gallery__post post">
+              <div class="post__author">
+                <span class="post__name">Борис</span>
+
+                <span class="post__time">(20 часов назад)</span>
+              </div>
+
+              <p class="post__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
+
+              <button class="post__like" type="button">Нравится: 215</button>
+            </div>
+          </li>
+
+          <li class="gallery__item">
+            <a href="img/photo-fair-desktop@2x.jpg" target="blank" title="Увеличить фото">
+              <img src="#" alt="fair">
+            </a>
+
+            <div class="gallery__post post">
+              <div class="post__author">
+                <span class="post__name">Сергей</span>
+
+                <span class="post__time">(25 часов назад)</span>
+              </div>
+
+              <p class="post__message">Самая кубанская в мире!</p>
+
+              <button class="post__like" type="button">Нравится: 4</button>
+            </div>
+          </li>
+
+          <li class="gallery__item">
+            <a href="img/photo-pov-desktop@2x.jpg" target="blank" title="Увеличить фото">
+              <img src="#" alt="pov">
+            </a>
+
+            <div class="gallery__post post">
+              <div class="post__author">
+                <span class="post__name">Максим</span>
+
+                <span class="post__time">(40 часов назад)</span>
+              </div>
+              <p class="post__message">Где снег-то?</p>
+
+              <button class="post__like" type="button">Нравится: 150</button>
+            </div>
+          </li>
+
+          <li class="gallery__item">
+            <a href="img/photo-wing-desktop@2x.jpg" target="blank" title="Увеличить фото">
+              <img src="#" alt="wing">
+            </a>
+            <div class="gallery__post post">
+
+              <div class="post__author">
+                <span class="post__name">Надежда</span>
+
+                <span class="post__time">(45 часов назад)</span>
+              </div>
+
+              <p class="post__message">Всем GM и взаимные лайки!</p>
+              
+              <button class="post__like" type="button">Нравится: 2560</button>
+            </div>
+          </li>
+        </ul>
+      </section>
 
   </body>
 </html>
