Photo - разметка футера

--- a/source/photo.html
+++ b/source/photo.html
@@ -184,6 +184,7 @@
           </li>
         </ul>
       </section>
+      
 
       <section class="upload set-width">
         <h2 class="visually-hidden">Загрузите свою фотографию!</h2>
@@ -231,6 +232,35 @@
         </div>
       </section>
     </main>
+
+    <!-- Футер -->
+    <footer class="page-footer page-footer--mobile set-width">
+      <a class="page-footer__logo">
+        <img src="#" alt="Логотип сайта">
+      </a>
+
+      <section class="page-footer__social social">
+        <h2 class="visually-hidden">Ссылки на социальные сети</h2>
+
+        <a class="social__btn" href="#">
+          <img src="#" alt="Твитер">
+        </a>
+
+        <a class="social__btn" href="#">
+          <img src="#" alt="Фейсбук">
+        </a>
+
+        <a class="social__btn" href="#">
+          <img src="#" alt="Ютуб">
+        </a>
+      </section>
+
+      <a class="page-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">Разработано</span>
+
+        <img src="#" alt="Логотип академии">
+      </a>
+    </footer>
 
   </body>
 </html>
