Photo - форматирование кода и коментарии для навигации

--- a/source/photo.html
+++ b/source/photo.html
@@ -25,7 +25,7 @@
             <!-- Основная навигация -->
             <nav class="main-nav main-nav--nojs">
               <ul class="main-nav__list">
-                <li class="main-nav__item main-nav__item--active">
+                <li class="main-nav__item">
                   <a href="index.html">Главная</a>
                 </li>
 
@@ -44,15 +44,18 @@
             </nav>
           </div>
         </div>
+
         <h1 class="page-header__title">Фотографии пользователей</h1>
       </header>
     </div>
 
+    <!-- Галерея фото -->
     <main class="page-main page-main--photo">
       <p class="page-main__text set-width">Взгляните на фотографии, которые выкладывают пользователи! Видите,&nbsp;как&nbsp;не хватает ваших?</p>
 
       <section class="gallery set-width">
         <h2 class="visually-hidden">Фотогалерея</h2>
+
         <ul class="gallery__list">
           <li class="gallery__item gallery__item--panorama">
             <div class="gallery__img-wrapper">
@@ -184,8 +187,8 @@
           </li>
         </ul>
       </section>
-      
 
+      <!-- Блок загрузок фото -->
       <section class="upload set-width">
         <h2 class="visually-hidden">Загрузите свою фотографию!</h2>
 
