--- a/source/form.html
+++ b/source/form.html
@@ -226,5 +226,34 @@
         <img src="#" alt="Логотип академии">
       </a>
     </footer>
+
+    <!-- Оверлеи для валидации -->
+    <div class="fixed-overlay">
+      <div class="modal">
+        <div class="modal__message">
+          <h3 class="modal__title">Что-то пошло не так!</h3>
+
+          <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+
+          <div class="modal__wrapper">
+            <button class="modal__close" type="button">ok</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="fixed-overlay">
+      <div class="modal">
+        <div class="modal__message modal__message--success">
+          <h3 class="modal__title">Ваша заявка отправлена</h3>
+
+          <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
+
+          <div class="modal__wrapper modal__wrapper--background">
+            <button class="modal__close" type="button">Закрыть окно</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
