--- a/source/form.html
+++ b/source/form.html
@@ -7,6 +7,7 @@
     <title>Форма</title>
     <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <!-- Шапка сайта -->
